# nfd-data-marketplace

./: .gitignore  README.md  bootstrap_lsb.bat  bootstrap_lsb.sh  bootstrap_ssl.bat  contracts.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_hardhat.py
.cursor-1/context/: abc.md  architecture.md  code-flow.md  context.md  user-stories-vi.md  user-stories.md
.cursor-1/instructions/: migration-streamlit-to-fastapi.md
lsb_wm/: PHASE1_SUMMARY.md  README.md  USAGE_GUIDE.md  requirements.txt
lsb_wm/examples/: README.md  demo_basic.py  extract_only.py
lsb_wm/lsb_wm/: __init__.py  decode.py  encode.py
lsb_wm/tests/: __init__.py  test_decode.py  test_encode.py
src/: app.py  contract.py  dashboard.py  extract_watermark.py  market.py  provider.py  upload.py  user_utils.py  utils.py
src/db/: seed.sql
src/lsb_watermarking/: README.md  __init__.py  decode.py  encode.py  main_multibit.py  utils.py
src/plots/: contract_local.py
src/ssl_watermarking/: main_0bit.py  main_multibit.py  plot_acc.py  utils.py  utils_img.py
src/ssl_watermarking/output/: df_25_6.csv  df_30_6.csv  df_35_6.csv  df_40_6.csv  df_45_6.csv  df_agg_20_6.csv  df_agg_30_6.csv  df_agg_35_6.csv  df_agg_40_6.csv  df_agg_45_6.csv
