[project]
name = "nft-based-data-marketplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "markitdown[all]>=0.1.3",
    "python-bitcoinlib==0.12.2",
    "requests==2.32.5",
    "urllib3==2.5.0",
]
