[project]
name = "nfd-data-marketplace"
version = "0.1.0"
description = "A decentralized NFT-based data marketplace with integrated watermarking technology for traceability and ownership verification. Combines Ethereum smart contracts with deep learning-based watermarking to create a secure, traceable marketplace for digital assets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>1.24.2",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "web3>=7.14.0",
]
